--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "vitest": "vitest run",
-    "test": "playwright test",
-    "test:report": "playwright show-report"
+    "test": "vitest run"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -23,7 +21,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@playwright/test": "^1.47.2",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
